[FIX] web: form: avoid custom div to wrap
Since the removal of the `d-contents` in form view when we have a custom
div and not a field into an inner group it will wrap to the next line.

This commit fixes this problem using a class to identify when we have a
custom div and so excluding the CSS rules.

closes odoo/odoo#190130

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -478,7 +478,7 @@
     & .o_form_renderer:not(.o_kanban_quick_create_form) .o_inner_group {
         @include media-breakpoint-up(sm) {
             .o_cell:first-child:last-child,
-            .o_cell:not(.o_wrap_label):not(.o_wrap_input) {
+            .o_cell:not(.o_wrap_label):not(.o_wrap_input):not(.o_cell_custom) {
                 grid-column: span 2;
             }
         }
